[package]
name = "ml"
version = "0.1.0"
authors = ["adjivas <adjivas@users.noreply.github.com>"]

[dependencies.syntex_syntax]
version = "0.58"

[dependencies.syntex_errors]
version = "0.58"

[dependencies.rustc-serialize]
version = "0.3"

[dependencies.itertools]
version = "0.5"

[dependencies.dot]
version = "0.1"
